# s21_decimal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  conv.py  custom_decimal.py  s21_decimal  test.c  test.py
py_test/: my_decimal.py  print_dec_to_int_testcase.py
src/: Makefile  main_tests.c  s21_decimal.h  s21_test.c
src/MyLib/: bit.h  color.h
src/another/: balancing.c  bank_round.c  decimal_another.h  s21_floor.c  s21_neg.c  s21_round.c  s21_truncate.c
src/arithmetic/: add.c  decimal_arithmetic.h  div.c  fmod.c  mul.c  sub.c
src/comparison/: decimal_comparison.h  s21_eq.c  s21_less.c  s21_less_or_eq.c
src/convertion/: dec_to_float.c  dec_to_int.c  decimal.h  float_to_dec.c  int_to_dec.c  shared.c  test.c
src/core/: bit.c  constants.h  debug.c  decimal.c  decimal_core.h  exponent.c  shift.c
src/st_test/: dec_to_float_test.c  float_to_dec_test.c  floor_test.c  main.c  main.h  negate_test.c  round_test.c  truncate_test.c
src/test/: Makefile  addition_test.c  division_test.c  float_addition_test.c  float_division_test.c  float_fmod.c  float_fmod_not_working.c  float_multiplication_test.c  float_subtraction_test.c  fmod_test.c  main_tests.c  multiplication_test.c  start.c  subtraction_test.c  test  test.check
src/test/gmp-6.2.1/: Makefile  config.status  libtool
src/test/gmp-6.2.1/cxx/: Makefile
src/test/gmp-6.2.1/demos/: Makefile
src/test/gmp-6.2.1/demos/calc/: Makefile
src/test/gmp-6.2.1/demos/expr/: Makefile
src/test/gmp-6.2.1/doc/: Makefile
src/test/gmp-6.2.1/mpf/: Makefile
src/test/gmp-6.2.1/mpn/: Makefile
src/test/gmp-6.2.1/mpq/: Makefile
src/test/gmp-6.2.1/mpz/: Makefile
src/test/gmp-6.2.1/printf/: Makefile
src/test/gmp-6.2.1/rand/: Makefile
src/test/gmp-6.2.1/scanf/: Makefile
src/test/gmp-6.2.1/tests/: Makefile
src/test/gmp-6.2.1/tests/cxx/: Makefile
src/test/gmp-6.2.1/tests/devel/: Makefile
src/test/gmp-6.2.1/tests/misc/: Makefile
src/test/gmp-6.2.1/tests/mpf/: Makefile
src/test/gmp-6.2.1/tests/mpn/: Makefile
src/test/gmp-6.2.1/tests/mpq/: Makefile
src/test/gmp-6.2.1/tests/mpz/: Makefile
src/test/gmp-6.2.1/tests/rand/: Makefile
src/test/gmp-6.2.1/tune/: Makefile
src/test/mass_tests/: Makefile  addition_test.c  division_test.c  float_addition_test.c  float_division_test.c  float_multiplication_test.c  float_subtraction_test.c  fmod_test.c  log.txt  multiplication_test.c  subtraction_test.c
src/test/mass_tests_no_work/: Makefile  addition_test.c  division_test.c  float_addition_test.c  float_division_test.c  float_multiplication_test.c  float_subtraction_test.c  fmod_test.c  multiplication_test.c  subtraction_test.c
